--- a/OpenYourWorldAndroid/app/src/main/res/layout/fragment_first.xml
+++ b/OpenYourWorldAndroid/app/src/main/res/layout/fragment_first.xml
@@ -14,12 +14,15 @@
 
         <org.osmdroid.views.MapView
             android:id="@+id/osmmap"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="208dp"
+            android:layout_height="699dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.44"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <androidx.compose.ui.platform.ComposeView
             android:id="@+id/compose_view"
